--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,25 +6,23 @@ add_executable(tests tests.cpp)
 # Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
 #add_executable(mile_to_kilometer mile_to_kilometer.cpp)
 
-add_executable(1.3 1.3.cpp)
+add_executable(1_3 1_3.cpp)
 
-add_executable(1.4-1.7 1.4-1.7.cpp)
+add_executable(1_15 1_15.cpp)
 
-add_executable(1.15 1.15.cpp)
+add_executable(1_9 1:9.cpp)
 
-add_executable(1.9 1.9.cpp)
+add_executable(1_10 1_10.cpp)
 
-add_executable(1.10 1.10.cpp)
+add_executable(1_12 1_12.cpp)
 
-add_executable(1.12 1.12.cpp)
+add_executable(1_13 1_13.cpp)
 
-add_executable(1.13 1.13.cpp)
+add_executable(1_14 1_14.cpp)
 
-add_executable(1.14 1.14.cpp)
+add_executable(1_15 1_15.cpp)
 
-add_executable(1.15 1.15.cpp)
-
-add_executable(1.11 1.11.cpp)
+add_executable(1_11 1_11.cpp)
 
 
 
